# appointment_project

./: .gitignore  CMakeLists.txt  README.md
docs/: design_document.md
include/database/: Database.h
include/models/: Patient.h  PatientFactory.h  Person.h
include/utils/: Error.h  ErrorCode.h
src/: main.cpp
src/database/: Database.cpp
src/models/: Patient.cpp  PatientFactory.cpp  Person.cpp
src/utils/: Error.cpp
